Cleaned up log locations for atomikos and derby, a few cleanups and improvements to the build process and added targets for run and load
git-svn-id: https://moqui.svn.sourceforge.net/svnroot/moqui/trunk@163 77d6ed94-2e2c-4b3b-a835-e9bc6a43c7e3