@@ -13,6 +13,7 @@ This Work includes contributions authored by David E. Jones, not as a
 
 <project name="Moqui Main Build" default="build" basedir=".">
     <property environment="env"/>
+    <property name="version" value="1.0"/>
     <property name="tomcat.home" value="../apache-tomcat-7.0.6"/>
 
     <target name="init">
@@ -29,7 +30,7 @@ This Work includes contributions authored by David E. Jones, not as a
 
     <target name="clean-db" description="Clean all DB data (Derby) under runtime/db">
         <delete verbose="on" includeemptydirs="true">
-            <fileset dir="runtime/db" includes="**/*">
+            <fileset dir="runtime/db/derby" includes="**/*">
                 <exclude name="derby.properties"/>
             </fileset>
         </delete>
@@ -52,13 +53,13 @@ This Work includes contributions authored by David E. Jones, not as a
             <filelist dir="." files="framework/build.xml"/>
         </subant>
         <delete verbose="on">
-            <fileset file="moqui.war"/>
+            <fileset file="moqui-${version}.war"/>
         </delete>
     </target>
 
     <!-- ========== build targets ========== -->
     <target name="build" depends="init">
-        <subant inheritall="false">
+        <subant inheritall="true">
             <filelist dir="." files="framework/build.xml"/>
         </subant>
     </target>
@@ -72,7 +73,7 @@ This Work includes contributions authored by David E. Jones, not as a
 
     <!-- ========== war targets ========== -->
     <target name="war" depends="build">
-        <war destfile="moqui.war" webxml="framework/webapp/WEB-INF/web.xml">
+        <war destfile="moqui-${version}.war" webxml="framework/webapp/WEB-INF/web.xml">
             <!-- no html/etc webapp files for now: <fileset dir="html"/> -->
             <lib dir="framework/api/lib">
                 <exclude name="winstone-0.9.10.jar"/>
@@ -100,6 +101,18 @@ This Work includes contributions authored by David E. Jones, not as a
         <delete verbose="on" failonerror="false">
             <fileset dir="${tomcat.home}/logs" includes="*"/>
         </delete>
-        <copy file="moqui.war" todir="${tomcat.home}/webapps/"/>
+        <copy file="moqui-${version}.war" tofile="${tomcat.home}/webapps/moqui.war"/>
+    </target>
+
+    <target name="run" depends="war" description="Run Moqui Web server with Embedded Winstone (run the executable war file)">
+        <java jar="moqui-${version}.war" fork="true">
+            <jvmarg value="-Xmx256M"/>
+            <jvmarg value="-XX:MaxPermSize=64m"/>
+        </java>
+    </target>
+    <target name="load" depends="war" description="Run Moqui data loader (run the executable war file with -load)">
+        <java jar="moqui-${version}.war" fork="true">
+            <arg value="-load"/>
+        </java>
     </target>
 </project>
